# Plug-in

./: PROJECT_SUMMARY.md  README.md  VST3_Instructions.md  audio_filter_plugin.py  filter_demo.py  instruction.MD  plugin_host_bridge.py  requirements.txt  test_setup.py
AudioUnit/: CMakeLists.txt  FilterAudioUnit.cpp  FilterAudioUnit.h  Info.plist  Makefile  README_AU.md  build.sh  build_instructions_windows.bat  test_au.sh
ReaScript/: filter_reascript.py
VST3/: CMakeLists.txt  CROSS_PLATFORM_SUMMARY.md  FilterVST3.cpp  FilterVST3.h  FilterVST3Controller.cpp  FilterVST3Controller.h  INSTALL_CMAKE.md  README_CROSS_PLATFORM.md  build.bat  create_distribution.sh
VST3/FilterVST3_Distribution/: CMakeLists.txt  FilterVST3.cpp  INSTALL_MACOS.txt  README.txt  build.sh
VST3/FilterVST3_Distribution/resource/: FilterVST3.rc
